Specify maven-surefire-plugin version for non-solutions kata modules.
Signed-off-by: Rinat Gatyatullin <rinattalgatovich.gatyatullin@bnymellon.com>